fix: remove border-spacing

--- a/styles/table.scss
+++ b/styles/table.scss
@@ -6,6 +6,7 @@
 }
 
 table {
+    border-spacing: 0px;
   background-color: red;
   .tbhd {
     background-color: $dark-color;
